<resources>
    <string name="app_name">Money Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Stats</string>
    <string name="title_settings">Settings</string>
    <string name="add">Add record</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="caterory">Caterory</string>
    <string name="note">Description</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="your_balance_is">Your balance is:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="records">Records:</string>
    <string name="no_data_nuse_quot_quot_for_add_a_new_record">No data\nUse \"+\" for add a new record</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>Shopping</item>
        <item>Housing</item>
        <item>Transportation</item>
        <item>Entertainment</item>
        <item>Income</item>
        <item>Other</item>
    </string-array>

    <string-array name="graphs_array">
        <item>Balance</item>
        <item>Income and Expense</item>
        <item>Category expense</item>
    </string-array>
</resources>